# actsTest

./: BaseTpcSectorGeo.cxx  BaseTpcSectorGeo.h  BuildMyTelescopeDetector.cpp  BuildMyTelescopeDetector.h  CMakeLists.txt  MyDigitizationAlgorithm.cpp  MyDigitizationAlgorithm.hpp  MyFtdDetector.cpp  MyFtdDetector.h  MyFtdGeo.cxx  MyFtdGeo.h  MyRefittingAlgorithm.hpp  MySpacePointMaker.cpp  MySpacePointMaker.hpp  MyTelescope.cpp  MyTelescope.h  MyTelescopeG4DetectorConstruction.cpp  MyTelescopeG4DetectorConstruction.h  MyTrackFindingAlgorithm.cpp  MyTrackFindingAlgorithm.hpp  MyTrackWriter.cpp  README.md  analyse.C  analyse_summary.C  digi-smearing-config.json  draw.C  main.cpp  tracker.h  tracker_config.h
macros/: analyse.C  analyse_energy_loss.C  analyse_measurements.C  analyse_performance.C  analyse_resolution.C  analyse_seed_efficiency.C  analyse_seeds.C  analyse_sp_efficiency.C  analyse_spacepoint_resolution.C  analyse_summary.C  analyse_tracking_efficiency.C  analyse_tracks.C  analyse_trackstates.C  analytical_space_point_maker.C  analytical_space_point_maker2.C  compare_resolution.C  convert_urqmd_to_acts_format.C  draw.C  draw_mc_spectra.C  draw_pulls.C  draw_resolution.C  draw_seed_efficiency.C  draw_spacepoints.C  draw_straw_station.C  draw_straws.C  draw_tracking_efficiency.C  helix_spacepoint_maker.C  kinematics.C  parabolic_spacepoint_maker.C  parabolic_spacepoint_maker_linearized.C  read_particles.C  run_all.sh  run_mpd.sh  style.h
